Enroll on course, attach question to test
